[gd_scene load_steps=2 format=3 uid="uid://b667dg3qsqof6"]

[ext_resource type="Script" path="res://Scripts/CharacterSelection.gd" id="1_xb0kt"]

[node name="CharacterSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xb0kt")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Character Selection"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="AvailableContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AvailableContainer"]
layout_mode = 2
text = "Available Combatants"
horizontal_alignment = 1

[node name="AvailableList" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AvailableContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/AvailableContainer/AvailableList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="SelectionContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SelectionContainer"]
layout_mode = 2

[node name="PartyContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SelectionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PartyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SelectionContainer/HBoxContainer/PartyContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Your Party (0/4)"
horizontal_alignment = 1

[node name="PartyList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SelectionContainer/HBoxContainer/PartyContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="EnemyContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SelectionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SelectionContainer/HBoxContainer/EnemyContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Enemies (0/10)"
horizontal_alignment = 1

[node name="EnemyList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SelectionContainer/HBoxContainer/EnemyContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="StartBattleButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
disabled = true
text = "Start Battle"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/StartBattleButton" to="." method="_on_start_battle_button_pressed"]
